<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/set_lettrabulle_speed" />

        <RadioGroup
            android:id="@+id/radio_group_qcm_speed"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_qcm_slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_slow" />

            <RadioButton
                android:id="@+id/radio_qcm_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_medium" />

            <RadioButton
                android:id="@+id/radio_qcm_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_rapid" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/set_multiplechoice_speed" />

        <RadioGroup
            android:id="@+id/radio_group_lbulle_speed"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_lbulle_slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_slow" />

            <RadioButton
                android:id="@+id/radio_lbulle_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_medium" />

            <RadioButton
                android:id="@+id/radio_lbulle_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_rapid" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/settings_save"
        android:id="@+id/settings_save_btn" />

</LinearLayout>