<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mur1"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupSpeed"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_slow">

            <RadioButton
                android:id="@id/radio_slow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_slow"
                android:textColor="@drawable/rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_medium"
                android:textColor="@drawable/rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radio_fast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector1"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/spd_rapid"
                android:textColor="@drawable/rbtn_textcolor_selector" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lettrabulle_back"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:drawable/ic_menu_directions" />
    </LinearLayout>
</LinearLayout>